--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "tsc",
+    "start": "npm run compile && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +14,15 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/merge": "^9.0.8",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "graphql": "^16.9.0",
     "mongoose": "^8.7.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^22.7.7",
     "typescript": "^5.6.3"
   }
