--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,18 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@types/graphql-fields": "^1.3.9",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-subscriptions": "^2.0.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.7.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/node": "^22.7.9",
     "nodemon": "^3.1.7",
